/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

message Proto3Message {
  bool field1 = 1;
  string field2 = 2;
  int32 field3 = 3;
  uint32 field4 = 4;
  sint32 field5 = 5;
  fixed32 field6 = 6;
  sfixed32 field7 = 7;
  double field8 = 8;
  float field9 = 9;
  bytes field10 = 10;
  int64 field11 = 11;
  uint64 field12 = 12;
  sint64 field13 = 13;
  fixed64 field14 = 14;
  sfixed64 field15 = 15;
  NestedMessage nestedMessage = 16;
}

message NestedMessage {
  TestEnum testEnum = 20;
  repeated string repeatedField = 21;
  oneof oneOfField {
    string option1 = 22;
    bool option2 = 23;
    int32 option3 = 24;
  }
  map<string, int32> testMap = 25;
}

enum TestEnum {
  ENUM_VALUE_1 = 0;
  ENUM_VALUE_2 = 1;
  ENUM_VALUE_3 = 2;
}